Add admin and admin functionalities

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGODB_URI=mongodb://localhost:27017
 DATABASE_NAME=loans
 EMAIL_PASSWORD=jdvhpcnwlietvwna
 API_BASE_URL=http://localhost:8080
+ROOT_USERNAME=root
+ROOT_PASSWORD=rootPASSWORD123$$
+ROOT_EMAIL=root@example.com
